--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        <nav>
+            <a href="#">Contacto</a>    
+            <a href="#">Contacto 2</a>    
+        </nav>
+
+
+
+
+
+    </main>
 </body>
 </html>
